cmake_minimum_required(VERSION 3.20)
project(Lab_4)

set(CMAKE_CXX_STANDARD 23)

add_executable(Lab_4 main.cpp CSVParser.cpp CSVParser.h tupleout.h CSVLineParser.h CSVParserParametrs/RowSeparatorCharacter.cpp CSVParserParametrs/RowSeparatorCharacter.h CSVParserParametrs/StringCellMakerException.cpp CSVParserParametrs/StringCellMakerException.h CSVParserParametrs/ColumnSeparatorCharacter.cpp CSVParserParametrs/ColumnSeparatorCharacter.h CSVParserParametrs/ShieldingWatcher.cpp CSVParserParametrs/ShieldingWatcher.h CSVParserParametrs/CSVCellMaker.h CSVParserParametrs/CSVStringCellMakerImpl.cpp CSVParserParametrs/CSVStringCellMakerImpl.h CSVParserParametrs/CSVCellMakerBuilder.h CSVParserParametrs/CSVCellMakerBuilderImpl.cpp CSVParserParametrs/CSVCellMakerBuilderImpl.h)
