cmake_minimum_required(VERSION 3.20)
project(Lab_4)

set(CMAKE_CXX_STANDARD 23)

add_executable(Lab_4 main.cpp CSVParser.h tupleout.h CSVLazyParser.h CSVParserParametrs/RowSeparatorCharacter.cpp CSVParserParametrs/RowSeparatorCharacter.h CSVParserParametrs/CellMakeException.cpp CSVParserParametrs/CellMakeException.h CSVParserParametrs/ColumnSeparatorCharacter.cpp CSVParserParametrs/ColumnSeparatorCharacter.h CSVParserParametrs/ShieldingWatcher.cpp CSVParserParametrs/ShieldingWatcher.h CSVParserParametrs/CSVCellMaker.h CSVParserParametrs/CSVStringCellMaker.cpp CSVParserParametrs/CSVStringCellMaker.h CSVParserParametrs/CSVCellMakerBuilder.h CSVParserParametrs/CSVCellMakerBuilderImpl.cpp CSVParserParametrs/CSVCellMakerBuilderImpl.h CSVLazyParser.h  CSVLazyParseException.h CSVException.h)
